fixed the view on mobile, random background

--- a/main.css
+++ b/main.css
@@ -1,18 +1,19 @@
 body {
-    --background1: radial-gradient(ellipse at top, rgba(77, 36, 41, 0.713),rgba(45, 61, 87, 0.451),transparent),
-    linear-gradient(45deg, rgba(30, 31, 57, 0.675),rgba(33, 36, 44, 0.579),#345);
-    --background2: radial-gradient(farthest-corner at 2em 2em, rgba(13, 19, 32, 0.501) 0% ,rgba(16, 84, 156, 0.431) 100%),
-    linear-gradient(rgb(33, 44, 56),rgba(15, 5, 50, 0.785));
-    --background3: radial-gradient(ellipse at bottom, rgba(28, 28, 46, 0.57),rgba(18, 26, 71, 0.675),rgba(8, 33, 80, 0.596)),
-    linear-gradient(rgb(39, 115, 93),rgb(40, 53, 47));
+    --background1: radial-gradient(ellipse at top, rgba(28, 33, 64, 0.713),rgba(10, 45, 102, 0.451),transparent),
+    linear-gradient(45deg, rgba(17, 78, 79, 0.675),rgba(67, 32, 123, 0.579),rgb(40, 11, 75));
+    --background2: radial-gradient(farthest-corner at 2em 2em, rgba(31, 57, 113, 0.501) 0% ,rgba(4, 48, 94, 0.431) 100%),
+    linear-gradient(rgb(56, 33, 50),rgba(3, 81, 81, 0.785));
+    --background3: radial-gradient(ellipse at bottom, rgba(78, 52, 104, 0.57),rgba(13, 22, 75, 0.675),rgba(8, 33, 80, 0.596)),
+    linear-gradient(rgb(115, 39, 109),rgb(5, 53, 42));
 
-    background: var(--background1);
+    background: var(--background2);
+    color: rgb(231, 229, 229);
     
 
 }
 
 #maindiv {
-    height: 100vb;
+    /* height: 100vb; */
     display: flex;
     flex-direction: column;
 }
@@ -24,7 +25,7 @@ button {
     margin-top: 1em;
     background : var(--background2);
     font-size: 30px;
-    font-family: chilanka;
+    font-family: 'Kalam', cursive;
     padding: 1em;
     border-radius: 0.5em;
 }
@@ -33,8 +34,8 @@ input {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background: var(--background3);
-    font-family: chilanka;
+    background: var(--background1);
+    font-family: 'Kalam', cursive;
     font-size: 30px;
     padding: 1em;
     margin-bottom: 1em;
@@ -51,11 +52,10 @@ input {
 }
 .taskContainer {
     
-    background: var(--background1);
     border-radius: 0.5em;
     margin: 1em;
     padding: 1em;
-    font-family: chilanka;
+    font-family: 'Kalam', cursive;
     display: flex;
     flex-direction: column;
 }
@@ -72,5 +72,19 @@ input {
     justify-content: center;
     padding: 1em;
     font-size: 17px;
+}
+
+@media (max-width:700px) {
+   
+    #wall {
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 1fr;
+    }
+    input {
+        font-size: 10px;
+
+        width: 10em;
+    }
 }
 
